--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@mui/x-data-grid": "^6.19.10",
     "next": "14.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "axios": "^0.21.4",
+    "crypto-js": "^4.1.1",
+    "totp-generator": "^1.0.0",
+    "ws": "^7.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
